--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
     "sort-by": "^1.2.0"
   },
